lab1/Test/L1-A-13-3.output
Error Type B at Line 1
Error Type B at Line 4
Error Type B at Line 11
Error Type B at Line 12
Error Type B at Line 21
Error Type A at Line 27
Error Type A at Line 32
Error Type A at Line 36
